--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.12.1",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
     "typescript": "^4.1.2",
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.12.0"
   }
 }
